# slurm

./: RELEASE_NOTES  aclocal.m4
doc/html/: priority_multifactor.shtml
doc/man/man1/: scontrol.1  sprio.1
doc/man/man5/: slurm.conf.5
slurm/: slurm.h.in
src/api/: config_info.c
src/common/: assoc_mgr.c  read_config.c  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_pack.c  slurmdb_pack.c
src/plugins/accounting_storage/mysql/: as_mysql_assoc.c
src/plugins/priority/multifactor/: priority_multifactor.c
src/salloc/: opt.c
src/sattach/: Makefile.am  Makefile.in
src/sbatch/: opt.c
src/slurmctld/: job_mgr.c  power_save.c  proc_req.c  slurmctld.h
src/sprio/: opts.c  print.c  print.h  sprio.c
src/srun/: Makefile.am  Makefile.in
src/srun/libsrun/: opt.c
